--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "58ffef22-f760-4502-98b0-408e7ab0538a"
+  },
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
