--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,34 +12,42 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.12",
+    "@angular/cdk": "^13.1.1",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/forms": "~9.1.12",
+    "@angular/localize": "~9.1.12",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@antoned0/serverless-s3-sync": "github:antoned0/serverless-s3-sync",
     "@aws-amplify/ui-angular": "^0.4.7",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "angular2-chartjs": "^0.5.1",
     "aws-amplify": "^3.3.4",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^3.7.0",
+    "lodash": "^4.17.21",
+    "ng2-charts": "^3.0.0-rc.7",
     "node-s3-client": "github:antoned0/node-s3-client",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
     "serverless": "1.71.3",
     "serverless-dotenv-plugin": "^3.1.0",
     "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-python-requirements": "^4.3.0"
+    "serverless-python-requirements": "^4.3.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
