--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test:e2e:local": "ALLURE_RESULTS_DIR=e2e/src/report/allure npx playwright test --config=e2e/playwright.config.ts --project='SERVICE HEALTH'",
+    "test:e2e:ci": "START_SERVER_AND_TEST_INSECURE=1 BROWSER=none start-server-and-test start https://localhost:4200 test:e2e:local",
+    "allure:report": "npx allure serve ./e2e/src/report/allure"
   },
-  "private": true,
+  "private": true,   
   "dependencies": {
     "@angular/animations": "~9.1.12",
     "@angular/cdk": "^13.1.1",
@@ -45,9 +47,13 @@
     "@angular-devkit/build-angular": "^0.901.15",
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
+    "@playwright/test": "^1.17.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "13.13.52",
+    "@types/rimraf": "^3.0.2",
+    "adm-zip": "^0.5.9",
+    "allure-playwright": "2.0.0-beta.14",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -56,9 +62,11 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "playwright": "^1.17.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "start-server-and-test": "^1.14.0"
   }
 }
